--- a/gift-certificate.html
+++ b/gift-certificate.html
@@ -47,7 +47,7 @@
   <div class="container">
     <div class="w-full flex-jsb-c gap-4">
       <div class="flex-js-c gap-4">
-        <a href="/index.html">
+        <a href="/home.html">
           <img src="img/logo-header.svg" alt="logo" class="w-full max-w-[273px] hidden min-[1433px]:block">
           <img src="img/icons/fish-min-logo.svg" alt="logo" class="w-full min-w-[50px] block min-[1433px]:hidden">
         </a>
@@ -122,7 +122,7 @@
 
 <div
     class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] h-[65px] px-4 flex-jsb-c flex sm:hidden z-[1000]">
-  <a href="index.html">
+  <a href="home.html">
     <img src="img/logo-header.svg" alt="" class="w-[122px]">
   </a>
 
@@ -530,7 +530,7 @@ rounded-[24px] mb-[60px] mt-[80px] sm:mt-[20px] p-[90px] max-[1300px]:p-[40px] m
     <div class="w-full block min-[850px]:hidden mt-[-150px]">
 
       <div class="w-full flex-jsb-c border-b pb-6 border-white/20">
-        <a href="index.html">
+        <a href="home.html">
           <img src="img/logo-footer.svg" alt="logo-footer" class="w-[170px]">
         </a>
         <div class="flex-js-c gap-4 mt-4">
