--- a/basket.html
+++ b/basket.html
@@ -25,7 +25,7 @@
           г. Москва
           <img src="img/icons/down.svg" alt="">
         </div>
-  
+
         <div class="flex-je-c gap-6">
           <div class="flex-js-c gap-3">
             <div class="flex-js-c gap-3">
@@ -54,8 +54,8 @@
       </div>
     </div>
   </div>
-  
-  
+
+
   <div class="w-full py-4 hidden sm:!block">
     <div class="container">
       <div class="w-full flex-jsb-c gap-4">
@@ -64,14 +64,14 @@
             <img src="img/logo-header.svg" alt="logo" class="w-full max-w-[273px] hidden min-[1433px]:block">
             <img src="img/icons/fish-min-logo.svg" alt="logo" class="w-full min-w-[50px] block min-[1433px]:hidden">
           </a>
-  
+
           <button
               class="bg-blue rounded-[8px] px-6 h-[50px] flex-js-c min-w-[915pox]:flex-jsb-c gap-3 text-white hover:bg-blue/80 transition min-w-[150px] flex min-[915px]:hidden">
             <img src="img/icons/menu-catalog.svg" alt="menu-catalog">
             Каталог
           </button>
         </div>
-  
+
         <div class="flex-jsb-c gap-4 hidden min-[915px]:flex flex-grow">
           <button
               class="bg-blue rounded-[8px] px-6 h-[50px] flex-js-c min-w-[915pox]:flex-jsb-c gap-3 text-white hover:bg-blue/80 transition  min-w-[150px]">
@@ -88,21 +88,21 @@
             </button>
           </form>
         </div>
-  
-  
+
+
         <div class="flex-jsb-c gap-8">
-          
-  
+
+
           <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
             <img src="img/icons/heard-blue.svg" alt="heard-blue">
             <span class="hidden min-[1150px]:inline-block hover:text-blue transition">Избранное</span>
           </a>
-  
+
           <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
             <img src="img/icons/rows-block.svg" alt="rows-block">
             <span class="hidden min-[1150px]:inline-block hover:text-blue transition">Сравнения</span>
           </a>
-  
+
           <div class="flex-js-c gap-4 text-[18px] text-black text-medium">
             <div class="relative w-10 h-10 flex-jc-c">
               <img src="img/icons/shop.svg" alt="card-blue">
@@ -111,43 +111,43 @@
             </div>
             <span class="hidden min-[1150px]:inline-block hover:text-blue transition cursor-pointer">Корзина</span>
           </div>
-  
+
         </div>
-  
+
       </div>
-  
+
     </div>
   </div>
-  
+
   <div
       class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] h-[65px] px-4 flex-jsb-c flex sm:hidden z-[1000]">
     <a href="home.html">
       <img src="img/logo-header.svg" alt="" class="w-[122px]">
     </a>
-  
+
     <div class="flex-jsb-c gap-1">
       <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
         <img src="img/icons/heard-blue.svg" alt="heard-blue" width="24" height="24">
       </a>
-  
+
       <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
         <img src="img/icons/rows-block.svg" alt="rows-block" width="24" height="24">
       </a>
-  
+
       <div class="flex-js-c gap-4 text-[18px] text-black text-medium">
         <div class="relative w-10 h-10 flex-jc-c">
           <img src="img/icons/shop.svg" alt="card-blue" width="26" height="26">
           <span class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[12px] text-white">2</span>
         </div>
       </div>
-  
+
     </div>
-  
+
     <div class="flex-je-c gap-1">
       Меню
       <img src="img/icons/mobile-menu.svg" alt="mobile-menu">
     </div>
-  
+
   </div>
 
 
@@ -424,307 +424,7 @@
 </div>
 
 
-<footer class="bg-[#262626] mt-[250px]">
-  <div class="container">
-    <div class="w-full h-[360px] min-[500px]:h-[320px] relative transform translate-y-[-50%] bg-blue rounded-[12px]">
-      <img src="img/contact-me-bg.png" alt="contact-me-bg" class="w-full h-full object-cover  rounded-[16px]">
-      <img src="img/message-ilustriator.png" alt="message-illustrator"
-           class="absolute left-[2%] min-[1350px]:left-[10%] min-[1450px]:left-[17%] top-[-140px] min-[350px]:top-[-180px] min-[500px]:top-[-230px] min-[1256px]:top-[-100px] transform max-[500px]:!scale-50 max-[1240px]:!scale-75">
-      <div
-          class="absolute top-0 min-[890px]:top-[50%] max-[890px]:bottom-0 min-[890px]:right-[70px] transform min-[890px]:translate-y-[-50%] max-[576px]:pr-4 max-[576px]:pl-4 max-[890px]:pl-10 max-[431px]:pt-[50px] max-[890px]:pt-[100px]">
-        <h3 class="font-light max-[890px]:mb-2 max-[890px]:leading-[32px] text-[32px] min-[890px]:text-[64px] text-white">
-          Подпишись на рассылку</h3>
-        <p class="text-white">Получай наши новости, акции, советы и рекомендации экспертов</p>
-        <form action="#" class="w-full flex-jsb-c max-[431px]:flex-col gap-4 mt-4">
-          <label class="w-full h-[54px] bg-white overflow-hidden rounded-[8px]">
-            <input type="text" placeholder="Ваша почта" class="w-full h-full pl-6">
-          </label>
-          <button
-              class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2">
-            Подписаться
-          </button>
-        </form>
-      </div>
-    </div>
-
-
-    <div class="w-full grid-cols-12 gap-10 mt-[-60px] hidden min-[850px]:grid">
-      <div class="col-span-4 min-[1300px]:col-span-2">
-        <img src="img/logo-footer.svg" alt="logo-footer" class="mt-[-20px]">
-        <div class="flex-js-c gap-2 text-white mt-4">
-          Ваш город
-          <img src="img/icons/location.svg" alt="location">
-          <div class="text-white flex-js-c gap-2 cursor-pointer text-nowrap">
-            г. Москва
-            <img src="img/icons/down.svg" alt="">
-          </div>
-        </div>
-        <div class="flex-js-c gap-4 mt-4">
-          <a href="#">
-            <img src="img/icons/whats-app.svg" alt="whats-app">
-          </a>
-          <a href="#">
-            <img src="img/icons/tg.svg" alt="tg">
-          </a>
-        </div>
-      </div>
-
-      <div class="col-span-2 min-[1300px]:col-span-4">
-        <h4 class="text-white text-[20px] mb-4">Каталог</h4>
-        <div class="flex-jsb-s min-[1300px]:gap-[60px] max-[1300px]:flex-col">
-          <ul>
-            <li>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
-                Удилища
-              </a>
-            </li>
-            <li>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
-                Катушки
-              </a>
-            </li>
-            <li>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
-                Приманки
-              </a>
-            </li>
-            <li>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
-                Оснастка
-              </a>
-            </li>
-            <li>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
-                Зимняя рыбалка
-              </a>
-            </li>
-            <li>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
-                Одежда и обувь
-              </a>
-            </li>
-          </ul>
-          <ul>
-            <li>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
-                Электроника
-              </a>
-            </li>
-            <li>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
-                Аксессуары
-              </a>
-            </li>
-            <li>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
-                Туризм
-              </a>
-            </li>
-            <li>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
-                Скидки
-              </a>
-            </li>
-            <li>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
-                Сертификаты
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="col-span-2">
-        <h4 class="text-white text-[20px] mb-4">Сервис</h4>
-        <div class="flex-jsb-s gap-[60px]">
-          <ul>
-            <li>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
-                О магазине
-              </a>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
-                Доставка и оплата
-              </a>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
-                Подарочные карты
-              </a>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
-                Скидки
-              </a>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
-                Новости
-              </a>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
-                Сервис и гарантии
-              </a>
-              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
-                Контакты
-              </a>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-
-      <div class="col-span-4 min-[1200px]:col-span-2">
-        <div class="block min-[1200px]:hidden mb-4">
-          <h4 class="text-white text-[20px] mb-4">Контакты</h4>
-
-          <a href="tel: 8 (800) 101-86-53" class="text-white font-bold block">
-            8 (800) 101-86-53
-          </a>
-          <a href="tel: 8 (800) 101-86-53" class="text-white font-bold mb-4">
-            8 (921) 903-53-50
-          </a>
-
-          <button
-              class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2 mb-4">
-            Обратный звонок
-          </button>
-
-          <a href="mailto: fishemania777@yandex.ru" class="text-blue underline mb-4">
-            fishemania777@yandex.ru
-          </a>
-
-          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
-  Пн-Пт : с 10:00 до 18:00Сб-Вс : Выходные          </p>
-        </div>
-
-        <ul>
-          <li>
-            <a href="#" class="text-white opacity-80 mb-2 flex-js-c hover:text-blue text-[17px]">
-              <img src="img/icons/favorite.svg" alt="favorite" class="mr-2">
-              Избранное
-            </a>
-            <a href="#" class="text-white opacity-80 mb-2 flex-js-c hover:text-blue text-[17px]">
-              <img src="img/icons/rows-white.svg" alt="rows-white" class="mr-2">
-              Сравнения
-            </a>
-            <a href="#" class="text-white opacity-80 mb-2 flex-js-c hover:text-blue text-[17px]">
-              <img src="img/icons/basket-white.svg" alt="basket-white" class="mr-2">
-              Корзина
-            </a>
-            <a href="#" class="text-white opacity-80 mb-2 flex-js-c hover:text-blue text-[17px]">
-              <img src="img/icons/login-account.svg" alt="login-account" class="mr-2">
-              Регистрация и вход
-            </a>
-          </li>
-        </ul>
-
-      </div>
-
-
-      <div class="col-span-2 hidden min-[1200px]:block">
-        <h4 class="text-white text-[20px] mb-4">Контакты</h4>
-
-        <a href="tel: 8 (800) 101-86-53" class="text-white font-bold">
-          8 (800) 101-86-53
-        </a>
-        <a href="tel: 8 (800) 101-86-53" class="text-white font-bold mb-4">
-          8 (921) 903-53-50
-        </a>
-
-        <button
-            class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2 mb-4">
-          Обратный звонок
-        </button>
-
-        <a href="mailto: fishemania777@yandex.ru" class="text-blue underline mb-4">
-          fishemania777@yandex.ru
-        </a>
-
-        <p class="text-[14px] text-white opacity-80 max-w-[170px]">
-Пн-Пт : с 10:00 до 18:00Сб-Вс : Выходные        </p>
-      </div>
-
-
-    </div>
-
-
-    <div class="w-full block min-[850px]:hidden mt-[-150px]">
-
-      <div class="w-full flex-jsb-c border-b pb-6 border-white/20">
-        <a href="home.html">
-          <img src="img/logo-footer.svg" alt="logo-footer" class="w-[170px]">
-        </a>
-        <div class="flex-js-c gap-4 mt-4">
-          <a href="#">
-            <img src="img/icons/whats-app.svg" alt="whats-app" width="24px">
-          </a>
-          <a href="#">
-            <img src="img/icons/tg.svg" alt="tg" width="24px">
-          </a>
-        </div>
-      </div>
-
-
-      <ul class="w-full grid grid-cols-2 mt-4">
-        <li>
-          <a href="#" class="text-white opacity-80 mb-2 flex-js-c">
-            <img src="img/icons/favorite.svg" alt="favorite" class="mr-2">
-            Избранное
-          </a>
-        </li>
-        <li>
-          <a href="#" class="text-white opacity-80 mb-2 flex-js-c">
-            <img src="img/icons/rows-white.svg" alt="rows-white" class="mr-2">
-            Сравнения
-          </a>
-        </li>
-        <li>
-          <a href="#" class="text-white opacity-80 mb-2 flex-js-c">
-            <img src="img/icons/basket-white.svg" alt="basket-white" class="mr-2">
-            Корзина
-          </a>
-        </li>
-        <li>
-          <a href="#" class="text-white opacity-80 mb-2 flex-js-c">
-            <img src="img/icons/login-account.svg" alt="login-account" class="mr-2">
-            Регистрация и вход
-          </a>
-        </li>
-      </ul>
-
-      <div class="mb-4 w-full grid grid-cols-2 mt-4">
-
-        <div>
-          <a href="tel: 8 (800) 101-86-53" class="text-white font-bold block">
-            8 (800) 101-86-53
-          </a>
-          <a href="tel: 8 (800) 101-86-53" class="text-white font-bold mb-4">
-            8 (921) 903-53-50
-          </a>
-        </div>
-
-        <button
-            class="bg-[#CF301B] hover:bg-[#CF301B]/90 transition h-[54px] px-6 rounded-[8px] text-white text-nowrap font-bold flex-jc-c gap-2 mb-4">
-          Обратный звонок
-        </button>
-
-        <div>
-          <a href="mailto: fishemania777@yandex.ru" class="text-blue underline">
-            fishemania777@yandex.ru
-          </a>
-
-          <p class="text-[14px] text-white opacity-80 max-w-[170px]">
-  Пн-Пт : с 10:00 до 18:00Сб-Вс : Выходные          </p>
-        </div>      </div>
-
-    </div>
-
-
-  </div>
-
-  <div class="w-full h-[1px] bg-white/20 mt-6 mb-2"></div>
-
-  <div class="container pb-4">
-    <div class="w-full min-[420px]:h-[54px] flex-js-s gap-3 min-[420px]:flex-jsb-c max-[420px]:flex-col">
-      <p class="text-[14px] text-white opacity-80">Информация, размещенная на сайте, не является публичной офертой.</p>
-      <p class="text-[14px] text-white opacity-80">© 2005–2025. Все права защищены</p>
-    </div>
-  </div>
-
-</footer>
+  <component src="./components/footer.html"></component>
 
 
 <script src="js/script.js"></script>
